--- a/assets/index.html
+++ b/assets/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="vendor/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.2/css/fontawesome.min.css">
-    <link rel="stylesheet" href="font/fontawesome.min.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <title>Figma prj</title>
 </head>
 <body>
@@ -70,19 +69,19 @@
                       <div class="check-out mt-5 mb-5">
                         <div class="check-1 d-flex align-items-center">
                             <span>
-                                <i class="fa-solid fa-check"></i>
+                                <i class="fas fa-check"></i>
                             </span>
                             <div class="range"></div>
                         </div>
                         <div class="check-2 d-flex align-items-center">
                             <span >
-                                <i class="fa-solid fa-check"></i>
+                                <i class="fas fa-check"></i>
                             </span>
                             <div class="range"></div>
                         </div>
                         <div class="check-3 d-flex align-items-center">
                             <span >
-                                <i class="fa-solid fa-check"></i>
+                                <i class="fas fa-check"></i>
                             </span>
                             <div class="range"></div>
                         </div>
@@ -103,7 +102,7 @@
                 <div class="step-down">
                     <div class="d-flex justify-content-around align-items-center">
                         <div class="left">
-                            <i class="fa-solid fa-circle-check"></i>
+                            <i class="fas fa-check"></i>
                         </div>
                         <div class="right">
                             <h3>Project Updated</h3>
@@ -146,28 +145,28 @@
     <div class="row justify-content-between align-items-center">
         <div class="col-lg-3 col-md-6 col-sm-12">
        <div class="icon">
-        <i class="fa-solid fa-clock"></i>
+        <i class="fas fa-clock"></i>
        </div>
        <h6>Save time when designing</h6>
        <p>Your new projects are simply a click away with our intuitive creation flow</p>
         </div>
         <div class="col-lg-3 col-md-6 col-sm-12">
             <div class="icon">
-             <i class="fa-solid fa-clock"></i>
+             <i class="fas fa-clock"></i>
             </div>
             <h6>Save time when designing</h6>
             <p>Your new projects are simply a click away with our intuitive creation flow</p>
              </div>
              <div class="col-lg-3 col-md-6 col-sm-12">
                 <div class="icon">
-                 <i class="fa-solid fa-clock"></i>
+                 <i class="fas fa-clock"></i>
                 </div>
                 <h6>Save time when designing</h6>
                 <p>Your new projects are simply a click away with our intuitive creation flow</p>
                  </div>
                  <div class="col-lg-3 col-md-6 col-sm-12">
                     <div class="icon">
-                     <i class="fa-solid fa-clock"></i>
+                     <i class="fas fa-clock"></i>
                 </div>
             <h6>Save time when designing</h6>
              <p>Your new projects are simply a click away with our intuitive creation flow</p>
@@ -242,7 +241,7 @@
       <div class="col-lg-6 col-md-6 col-sm-12">
         <div class="text-info">
             <div class="quote-left">
-                <i class="fa-solid fa-quote-left"></i>
+                <i class="fas fa-quote-left"></i>
             </div>
             <div class="info">
                 <p>This is the best product we used for our work and we can’t thank you enough </p>
@@ -274,29 +273,30 @@
             <div class="d-flex justify-content-around">
                 <div class="obligation">
                     <span>
-                    <i class="fa-solid fa-message-check"></i>
-                    ok
+                        ok
+                    <i class="fab fa-message-check"></i>
+                    
                     </span>
                     <p>No Oblogation</p>
                 </div>
                 <div class="obligation">
                     <span>
                         ok
-                        <i class="fa-solid fa-message-check"></i>
+                        <i class="fab-fa-message-check"></i>
                         </span>
                     <p>No Oblogation</p>
                 </div>
                 <div class="obligation">
                     <span>
                         ok
-                        <i class="fa-solid fa-message-check"></i>
+                        <i class="fab fa-message-check"></i>
                     </span>
                     <p>No Oblogation</p>
                 </div>
                 <div class="obligation">
                     <span>
                         ok
-                        <i class="fa-solid fa-message-check"></i>
+                        <i class="fab fa-message-check"></i>
                      </span>
                     <p>No Oblogation</p>
                 </div>
@@ -376,25 +376,28 @@
            <ul class="p-0 m-0">
             <li>
                 <span>
-                    <i class="fa-solid fa-circle-check"></i>
+                    <i class="fas fa-check"></i>
+
                 </span>
                 <a href="">All Features</a>
             </li>
             <li>
                 <span>
-                    <i class="fa-solid fa-circle-check"></i>
+                    <i class="fas fa-check"></i>
                 </span>
                 <a href="">Unlimited projects</a>
             </li>
             <li>
                 <span>
-                    <i class="fa-solid fa-circle-check"></i>
+                    <i class="fas fa-check"></i>
+
                 </span>
                 <a href="">No payment needed</a>
             </li>
             <li>
                 <span>
-                    <i class="fa-solid fa-circle-check"></i>
+                    <i class="fas fa-check"></i>
+
                 </span>
                 <a href="">Free onboarding</a>
             </li>
@@ -418,37 +421,43 @@
            <ul class="p-0 m-0">
             <li>
                 <span>
-                    <i class="fa-solid fa-circle-check"></i>
+                    <i class="fas fa-check"></i>
+
                 </span>
                 <a href="">All Features</a>
             </li>
             <li>
                 <span>
-                    <i class="fa-solid fa-circle-check"></i>
+                    <i class="fas fa-check"></i>
+
                 </span>
                 <a href="">Unlimited projects</a>
             </li>
             <li>
                 <span>
-                    <i class="fa-solid fa-circle-check"></i>
+                    <i class="fas fa-check"></i>
+
                 </span>
                 <a href="">No payment needed</a>
             </li>
             <li>
                 <span>
-                    <i class="fa-solid fa-circle-check"></i>
+                    <i class="fas fa-check"></i>
+
                 </span>
                 <a href="">Free onboarding</a>
             </li>
             <li>
                 <span>
-                    <i class="fa-solid fa-circle-check"></i>
+                    <i class="fas fa-check"></i>
+
                 </span>
                 <a href="">Free onboarding</a>
             </li>
             <li>
                 <span>
-                    <i class="fa-solid fa-circle-check"></i>
+                    <i class="fas fa-check"></i>
+
                 </span>
                 <a href="">Free onboarding</a>
             </li>
@@ -469,43 +478,50 @@
            <ul class="p-0 m-0">
             <li>
                 <span>
-                    <i class="fa-solid fa-circle-check"></i>
+                    <i class="fas fa-check"></i>
+
                 </span>
                 <a href="">All Features</a>
             </li>
             <li>
                 <span>
-                    <i class="fa-solid fa-circle-check"></i>
+                    <i class="fas fa-check"></i>
+
                 </span>
                 <a href="">Unlimited projects</a>
             </li>
             <li>
                 <span>
-                    <i class="fa-solid fa-circle-check"></i>
+                    <i class="fas fa-check"></i>
+
                 </span>
                 <a href="">No payment needed</a>
             </li>
             <li>
                 <span>
-                    <i class="fa-solid fa-circle-check"></i>
+                    <i class="fas fa-check"></i>
+
                 </span>
                 <a href="">Free onboarding</a>
             </li>
             <li>
                 <span>
-                    <i class="fa-solid fa-circle-check"></i>
+                    <i class="fas fa-check"></i>
+
                 </span>
                 <a href="">Free onboarding</a>
             </li>
             <li>
                 <span>
-                    <i class="fa-solid fa-circle-check"></i>
+                    <i class="fas fa-check"></i>
+
                 </span>
                 <a href="">Free onboarding</a>
             </li>
             <li>
                 <span>
-                    <i class="fa-solid fa-circle-check"></i>
+                    <i class="fas fa-check"></i>
+
                 </span>
                 <a href="">Free onboarding</a>
             </li>
@@ -527,49 +543,61 @@
            <ul class="p-0 m-0">
             <li>
                 <span>
-                    <i class="fa-solid fa-circle-check"></i>
+                    <i class="fas fa-check"></i>
+
                 </span>
                 <a href="">All Features</a>
             </li>
             <li>
                 <span>
-                    <i class="fa-solid fa-circle-check"></i>
+                    <i class="fas fa-check"></i>
+
                 </span>
                 <a href="">Unlimited projects</a>
             </li>
             <li>
                 <span>
-                    <i class="fa-solid fa-circle-check"></i>
+                    <i class="fas fa-check"></i>
+
                 </span>
                 <a href="">No payment needed</a>
             </li>
             <li>
                 <span>
-                    <i class="fa-solid fa-circle-check"></i>
+                    <i class="fas fa-check"></i>
+
                 </span>
                 <a href="">Free onboarding</a>
             </li>
             <li>
+
                 <span>
-                    <i class="fa-solid fa-circle-check"></i>
+                    <i class="fas fa-check"></i>
+
                 </span>
                 <a href="">Free onboarding</a>
             </li>
             <li>
+
                 <span>
-                    <i class="fa-solid fa-circle-check"></i>
+                    <i class="fas fa-check"></i>
+
                 </span>
                 <a href="">Free onboarding</a>
             </li>
             <li>
+
                 <span>
-                    <i class="fa-solid fa-circle-check"></i>
+                    <i class="fas fa-check"></i>
+
                 </span>
                 <a href="">Free onboarding</a>
             </li>
             <li>
+
                 <span>
-                    <i class="fa-solid fa-circle-check"></i>
+                    <i class="fas fa-check"></i>
+
                 </span>
                 <a href="">Free onboarding</a>
             </li>
@@ -590,19 +618,19 @@
         <div class="col-lg-6 col-md-6 col-sm-12">
             <div class="left-side">
                 <h2>Quickly</h2>
-                <div class="connections">
-                    <div class="d-flex justify-content-around ">
+                <div class="connections mt-5">
+                    <div class="d-flex">
                         <div class="feed">
-                            <i class="fa-brands fa-facebook"></i>
+                            <i class="fab fa-facebook"></i>
                         </div>
                         <div class="feed">
-                            <i class="fa-brands fa-twitter"></i>
+                            <i class="fab fa-twitter"></i>
                         </div>
                         <div class="feed">
-                            <i class="fa-brands fa-linkedin"></i>
+                            <i class="fab fa-linkedin"></i>
                         </div>
                         <div class="feed">
-                            <i class="fa-brands fa-instagram"></i>
+                            <i class="fab fa-instagram"></i>
                         </div>
                     </div>
                 </div>
